# cloud_platform_programming

./: .gitignore  manage.py  requirements.txt
.ebextensions/: django.config
autoservice_pro/: pyproject.toml
autoservice_pro/autoservice_pro/: __init__.py  core.py
bookings/: admin.py  aws_utils.py  forms.py  models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_status.py
bookings/templates/: base.html
bookings/templates/bookings/: booking_create.html  booking_detail.html  booking_success.html  dashboard.html  service_list.html  vehicle_confirm_delete.html  vehicle_create.html  vehicle_edit.html  vehicle_list.html
bookings/templates/registration/: login.html  register.html
vehicle_service_project/: asgi.py  settings.py  urls.py  wsgi.py
