[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoservice_pro"
version = "0.1.0"
description = "Helper library for vehicle service time and price estimation."
authors = [{ name = "gundetisachin" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://example.com"
